[gd_scene load_steps=18 format=3 uid="uid://d03q4bemjddqu"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_lkwi8"]
[ext_resource type="PackedScene" uid="uid://dnbd8nrlqosko" path="res://scenes/backstab/backstab.tscn" id="3_jy5vy"]
[ext_resource type="Texture2D" uid="uid://brvlla2dyfdw6" path="res://scenes/player/Lead_idle_animation.png" id="3_o3ab8"]
[ext_resource type="PackedScene" uid="uid://jlood4k8vocs" path="res://scenes/ui/game_ui.tscn" id="3_v0i56"]
[ext_resource type="Texture2D" uid="uid://dvvipqlyw4fgy" path="res://scenes/player/Lead_run_animation.png" id="4_eemkp"]
[ext_resource type="Texture2D" uid="uid://ccg8evjlwwv5q" path="res://scenes/player/Lead_run_transition.png" id="5_6wdgm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ribg"]
size = Vector2(16, 30)

[sub_resource type="CanvasTexture" id="CanvasTexture_y7mli"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_undrx"]
input_0/name = "Idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Run"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ygjqs"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twcnb"]
animation = &"Running"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_86gix"]
graph_offset = Vector2(-122.17, 220.17)
nodes/Ground_h/node = SubResource("AnimationNodeTransition_undrx")
nodes/Ground_h/position = Vector2(620, 140)
nodes/Idle/node = SubResource("AnimationNodeAnimation_ygjqs")
nodes/Idle/position = Vector2(160, 100)
nodes/Run/node = SubResource("AnimationNodeAnimation_twcnb")
nodes/Run/position = Vector2(160, 320)
nodes/output/position = Vector2(1020, 40)
node_connections = [&"Ground_h", 0, &"Idle", &"Ground_h", 1, &"Run", &"output", 0, &"Ground_h"]

[sub_resource type="Animation" id="Animation_g1pgx"]
resource_name = "Idle"
length = 2.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o3ab8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 4, 5, 6, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_yykmm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o3ab8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e8udc"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_eemkp")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_i3t3u"]
resource_name = "Transition"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6wdgm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vob51"]
_data = {
"Idle": SubResource("Animation_g1pgx"),
"RESET": SubResource("Animation_yykmm"),
"Running": SubResource("Animation_e8udc"),
"Transition": SubResource("Animation_i3t3u")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_lkwi8")
backstab = ExtResource("3_jy5vy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2ribg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4.76837e-07)
scale = Vector2(16.1289, 30)
texture = SubResource("CanvasTexture_y7mli")

[node name="Player_Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_o3ab8")
hframes = 4
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "Player_Sprite/Player_Animation",
"slice": "",
"source": "E:/Art/aseprite/last_of_the_lead_art/Lead_run_transition.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "6f49399fb948df4f2b804a407e26bd3d"
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": false
}

[node name="Player_Animation_Tree" type="AnimationTree" parent="."]
root_node = NodePath("../Player_Sprite")
tree_root = SubResource("AnimationNodeBlendTree_86gix")
anim_player = NodePath("../Player_Animation")
parameters/Ground_h/current_state = "Idle"
parameters/Ground_h/transition_request = ""
parameters/Ground_h/current_index = 0

[node name="Player_Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player_Sprite")
libraries = {
"": SubResource("AnimationLibrary_vob51")
}

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="MarkerWeaponRight" type="Marker2D" parent="."]
position = Vector2(10, -1)

[node name="MarkerWeaponLeft" type="Marker2D" parent="."]
position = Vector2(-10, -1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("3_v0i56")]

[node name="Node2D" type="Node2D" parent="."]

[node name="MarkerHead" type="Marker2D" parent="Node2D"]
position = Vector2(8, -15)

[node name="MarkerHead2" type="Marker2D" parent="Node2D"]
position = Vector2(-8, -15)

[node name="MarkerFeet" type="Marker2D" parent="Node2D"]
position = Vector2(8, 15)

[node name="MarkerFeet2" type="Marker2D" parent="Node2D"]
position = Vector2(-8, 15)

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
